Updated view.php to add a horizontal rule separator between articles when multiple articles are displayed in sequence (i.e. when an individual article was not specified). I also added an article_separator class to jotz.css to style the new horizontal rule separator.

--- a/jotz/jotz.css
+++ b/jotz/jotz.css
@@ -74,6 +74,11 @@ div.article_list_separator {
     padding:0.75em 15% 0.5em 15%; 
 }
 
+div.article_separator {
+    clear:both;
+    padding:1em 10% 1em 10%; 
+}
+
 nav {
     padding:1em 0 1em 0;
 }
