Trying another commit to capture all changes to jotz.css and cms_index.php - not sure why latest changes were ignored last time.

--- a/jotz/jotz.css
+++ b/jotz/jotz.css
@@ -89,7 +89,15 @@ nav > span {
 }
 
 div.analytics {
-    text-align: center;
-    padding: 2em;
+    text-align:center;
+    padding:2em;
+}
+
+div.analytics > span.within_limit {
+    color: green;
+}
+
+div.analytics > span.exceeded_limit {
+    color: red;
 }
 
